--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "debug": "node debug ./bin/www"
   },
   "dependencies": {
+    "body-parser": "^1.15.2",
     "debug": "~2.2.0",
     "express": "~4.13.1",
-    "morgan": "~1.6.1"
+    "morgan": "~1.6.1",
+    "nodemailer": "^2.5.0"
   }
 }
