--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "debug": "node debug ./bin/www"
+    "debug": "node debug ./bin/www",
+    "deploy": "./deploy/deploy.sh"
   },
   "dependencies": {
     "body-parser": "^1.15.2",
