--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   },
   "dependencies": {
     "body-parser": "^1.15.2",
+    "cookie-parser": "^1.4.3",
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "morgan": "~1.6.1",
-    "nodemailer": "^2.5.0"
+    "nodemailer": "^2.5.0",
+    "serve-favicon": "^2.4.2"
   }
 }
