--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cookie-parser": "^1.4.3",
     "debug": "~2.2.0",
     "express": "~4.13.1",
+    "jade": "^1.11.0",
     "morgan": "~1.6.1",
     "nodemailer": "^2.5.0",
     "serve-favicon": "^2.4.2"
