--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jade": "^1.11.0",
     "morgan": "~1.6.1",
     "nodemailer": "^2.5.0",
+    "request": "^2.81.0",
     "serve-favicon": "^2.4.2"
   },
   "devDependencies": {
