--- a/package.json
+++ b/package.json
@@ -13,13 +13,11 @@
   },
   "dependencies": {
     "body-parser": "^1.15.2",
-    "cookie-parser": "^1.4.3",
     "debug": "~2.2.0",
+    "dotenv": "^5.0.1",
     "express": "~4.13.1",
-    "jade": "^1.11.0",
     "morgan": "~1.6.1",
     "nodemailer": "^2.5.0",
-    "request": "^2.81.0",
     "serve-favicon": "^2.4.2"
   },
   "devDependencies": {
