--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "build": "browserify -t [ babelify --presets [ react ] ] lib/jacksonwearn.js -o public/javascripts/jacksonwearn-bundle.js",
+    "build-dev": "browserify -t [ babelify --presets [ react ] ] lib/jacksonwearn.js --debug | exorcist public/javascripts/jacksonwearn-bundle.js.map > public/javascripts/jacksonwearn-bundle.js",
     "coverage": "./node_modules/istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha -- --recursive",
     "debug": "node debug ./bin/www",
     "deploy": "./deploy/deploy.sh",
-    "lint": "./node_modules/.bin/eslint ./*.js ./lib/**/*.js ./routes/**/*.js ./test/**/*.js",
-    "fix": "./node_modules/.bin/eslint ./*.js ./lib/**/*.js ./routes/**/*.js ./test/**/*.js --fix",
+    "lint": "eslint .; exit 0",
+    "lint-fix": "eslint --fix .; exit 0",
     "start": "node ./bin/www",
     "test": "./node_modules/mocha/bin/mocha --recursive"
   },
@@ -17,14 +19,21 @@
     "dotenv": "^5.0.1",
     "express": "~4.13.1",
     "morgan": "~1.6.1",
-    "nodemailer": "^2.5.0",
-    "serve-favicon": "^2.4.2"
+    "nodemailer": "^2.5.0"
   },
   "devDependencies": {
+    "axios": "^0.18.0",
+    "babel-core": "^6.26.3",
+    "babel-preset-react": "^6.24.1",
+    "babelify": "^8.0.0",
     "eslint": "^4.3.0",
+    "exorcist": "^1.0.1",
     "expect.js": "^0.3.1",
     "istanbul": "^0.4.5",
     "mocha": "^3.4.2",
-    "proxyquire": "^1.8.0"
+    "prop-types": "^15.6.1",
+    "proxyquire": "^1.8.0",
+    "react": "^16.4.0",
+    "react-dom": "^16.4.0"
   }
 }
