--- a/package.json
+++ b/package.json
@@ -10,30 +10,32 @@
     "deploy": "./deploy/deploy.sh",
     "lint": "eslint .; exit 0",
     "lint-fix": "eslint --fix .; exit 0",
-    "start": "node ./bin/www",
+    "start": "npm run build && node ./bin/www",
     "test": "./node_modules/mocha/bin/mocha --recursive"
   },
-  "dependencies": {
-    "body-parser": "^1.15.2",
-    "debug": "~2.2.0",
-    "dotenv": "^5.0.1",
-    "express": "~4.13.1",
-    "morgan": "~1.6.1",
-    "nodemailer": "^2.5.0"
+  "engines": {
+    "node": "10.2.1"
   },
-  "devDependencies": {
+  "dependencies": {
     "axios": "^0.18.0",
     "babel-core": "^6.26.3",
     "babel-preset-react": "^6.24.1",
     "babelify": "^8.0.0",
+    "body-parser": "^1.15.2",
+    "debug": "~2.2.0",
+    "express": "~4.13.1",
+    "morgan": "~1.6.1",
+    "nodemailer": "^2.5.0",
+    "react": "^16.4.0",
+    "react-dom": "^16.4.0"
+  },
+  "devDependencies": {
+    "dotenv": "^5.0.1",
     "eslint": "^4.3.0",
     "exorcist": "^1.0.1",
     "expect.js": "^0.3.1",
     "istanbul": "^0.4.5",
     "mocha": "^3.4.2",
-    "prop-types": "^15.6.1",
-    "proxyquire": "^1.8.0",
-    "react": "^16.4.0",
-    "react-dom": "^16.4.0"
+    "proxyquire": "^1.8.0"
   }
 }
