--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "devDependencies": {
     "dotenv": "^5.0.1",
     "eslint": "^4.3.0",
+    "eslint-plugin-react": "^7.8.2",
     "exorcist": "^1.0.1",
     "expect.js": "^0.3.1",
     "istanbul": "^0.4.5",
