--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-preset-react": "^6.24.1",
     "babelify": "^8.0.0",
     "body-parser": "^1.15.2",
+    "browserify": "^16.2.2",
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "morgan": "~1.6.1",
