--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
     "morgan": "~1.6.1",
     "nodemailer": "^2.5.0",
     "react": "^16.4.0",
-    "react-dom": "^16.4.0"
+    "react-dom": "^16.4.0",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0",
+    "redux-logger": "^3.0.6"
   },
   "devDependencies": {
     "dotenv": "^5.0.1",
