--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build-dev": "browserify -t [ babelify --presets [ react ] ] lib/jacksonwearn.js --debug | exorcist public/javascripts/jacksonwearn-bundle.js.map > public/javascripts/jacksonwearn-bundle.js",
     "coverage": "./node_modules/istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha -- --recursive",
     "debug": "node debug ./bin/www",
-    "deploy": "./deploy/deploy.sh",
+    "deploy": "git push heroku master",
     "lint": "eslint .; exit 0",
     "lint-fix": "eslint --fix .; exit 0",
     "start": "npm run build && node ./bin/www",
