--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-dom": "^16.4.0",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
-    "redux-logger": "^3.0.6"
+    "redux-logger": "^3.0.6",
+    "validator": "^10.2.0"
   },
   "devDependencies": {
     "dotenv": "^5.0.1",
